# nautilus_backtest_python

./: .env.example  .gitignore  BACKTESTING_FRAMEWORKS_COMPARISON.md  BUILD_PLAN.md  DOCUMENTATION.md  NAUTILUS_CORE_DEEP_DIVE.md  README.md  pyproject.toml
examples/: buy_and_hold.py  ema_cross_strategy.py  run_backtest.py
nautilus_core/: account.py  cache.py  clock.py  data.py  data_engine.py  data_wranglers.py  enums.py  events.py  execution_engine.py  identifiers.py  instruments.py  msgbus.py  objects.py  order_factory.py  orders.py  portfolio.py  position.py  risk_engine.py
nautilus_core/backtest/: config.py  engine.py  exchange.py  results.py
nautilus_core/indicators/: atr.py  base.py  ema.py  sma.py
nautilus_core/trading/: config.py  strategy.py
polymarket/: data_client.py  example_backtest_live_data.py  example_backtest_synthetic.py  example_live_trading.py  instruments.py  live_client.py  strategies.py  tutorial.ipynb  tutorial.py
tests/: test_backtest_engine.py  test_ema_cross.py  test_objects.py  test_orders.py  test_portfolio.py  test_position.py
